# kubectl-analyze

./: Cargo.toml  README.md  rules.json
.github/workflows/: build.yml  release.yml
src/: args.rs  configuration.rs  k8s_rule.rs  main.rs  rules_updater.rs
