[package]
name = "RustRulesEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
anyhow = "1.0.100"
k8s-openapi = { version = "0.26.0", features = ["v1_32"] }
kube = "2.0.1"
jsonpath_lib = "0.3.0"
clap = { version = "4.5.53", features = ["derive"] }
colored = "3.0.0"
strum_macros = "0.27.2"